Edited project information

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                               <div class="col-md-6">
                                 <p>
                                   • Imagine a college student who is consumed with their studies and does not have time to properly plan out a diet of foods that he or she enjoys eating but will not intervene with his or her’s daily nutrients and calories needed to either maintain, gain, or lose weight. 
-                                  <br><br>• This Android app will be able to aide this student by providing them with the necessary components needed to maintain a healthy diet while still being able to enjoy their favorite food produce.
+                                  <br><br>• This Android app, consisting of 5+ use cases, will be able to aide this student by providing them with the necessary components, gathered from the Nutrition database (having 50000+ instances) provided by U.S department of agriculture, needed to maintain a healthy diet while still being able to enjoy their favorite food produce.
                                   <br><br>• This app works by having the user input his or her body weight, height, and goal weight. The app will then evaluate the amount of calories needed to either be in a caloric deficit or surplus to meet the user’s goals. 
                                   <br><br>• The user will then have access to meals that meet the user’s goals requirements and from then on the user will be able to rate these meals on a five-star rating scale in order to determine which meal would be more likely to be displayed during future use.
                                 </p>
@@ -922,7 +922,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                                     </li>
                                     <li>Technology Stack:
                                         <strong>
-                                          Python, Tableau
+                                          Python, Tableau, Kaggle
                                         </strong>
                                     </li>
                                 </ul>
@@ -1023,7 +1023,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                                 <img class="img-fluid img-centered" src="img/portfolio/location-mobile-smartphone-ss-rectangle-1920.png" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>• The algorithm uses frequency of places most visited by a user then uses a zip code in new location to find the most suitable living location based on accessibility of users favourite places to go (coffee shops, gyms, restaurants etc).
+                                <p>• This Android app uses frequency of places most visited by a user then uses a zip code in new location to find the most suitable living location based on accessibility of users favourite places to go (coffee shops, gyms, restaurants etc).
                                 <br>
                                 <br>• Analysed pattern of 100+ bank transactions and developed an application targeted to help users relocate to suggest places.
                                 <br>
