adding parallel project

--- a/index.html
+++ b/index.html
@@ -397,6 +397,16 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                       </div>
                       <img class="img-fluid" style="width: 900px; height: 255px;" src="img/portfolio/apps.jpg" alt="">
                   </a>
+              </div>
+              <div class="col-sm-4 portfolio-item filter algorithms">
+                    <a class="portfolio-link" href="#portfolioModal10" data-toggle="modal">
+                        <div class="caption-port">
+                            <div class="caption-port-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" style="width: 900px; height: 255px;" src="img/portfolio/parallel.png" alt="">
+                    </a>
               </div> 
           </div>
       </section>
@@ -1187,7 +1197,67 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             </div>
             </div>
         </div>
-    </div>    
+    </div>
+    <div class="portfolio-modal modal fade" id="portfolioModal10" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="close-modal" data-dismiss="modal">
+                  <div class="lr">
+                      <div class="rl"></div>
+                  </div>
+              </div>
+              <div class="container">
+              <div class="row">
+                      <div class="modal-body">
+                          <div class="title-bar">
+                            <div class="col-md-12">
+                              <h2 class="text-center">GPU PageRank evaluation</h2>
+                              <div class="heading-border"></div>
+                            </div>
+                          </div>
+                          <div class="row">
+                            <div class="col-md-6">
+                              <img class="img-fluid img-centered" src="img/portfolio/parallel.png" alt="">
+                            </div>
+                            <div class="col-md-6">
+                              <p>
+                                • Graph analytics plays a critical role in many applications, such as genome analysis, cybersecurity, and social networks. However, it is challenging to achieve high-performance large-scale graph analytics. So a parallel implementation is quintessential for faster analytics.
+                                <br>
+                                <br>• This project evaluates a parallel page rank algorithm on a google web dataset of 0.8M vertices and 5.1M edges executed on high performance servers. Achieved decent run times when compared with the sequential PageRank implementation.
+                              </p>
+                              <ul class="list-inline item-details">
+                                  <li>Organization:
+                                      <strong>
+                                        Georgia State University
+                                      </strong>
+                                  </li>
+                                  <li>Timeline:
+                                      <strong>
+                                        April 2020 - May 2020
+                                      </strong>
+                                  </li>
+                                  <li>Github:
+                                      <strong>
+                                        <a href="https://github.com/ab07max/Masters/tree/master/GSU-Semester-2/Parallel%20Algorithms/Parallel_Pagerank">Parallel PageRank</a>
+                                      </strong>
+                                  </li>
+                                  <li>Technology Stack:
+                                    <strong>
+                                      C, Shell
+                                    </strong>
+                                </li>
+                              </ul>
+                              <button class="btn btn-general btn-white" type="button" data-dismiss="modal">
+                                  <i class="fa fa-times"></i> Close
+                              </button>
+                          </div>
+                        </div>
+                      </div>
+              </div>
+          </div>
+          </div>
+      </div>
+  </div>    
 
 
     <!-- Global javascript -->
