Corrected Spelling mistake in project details

--- a/index.html
+++ b/index.html
@@ -1159,7 +1159,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                               </div>
                               <div class="col-md-6">
                                 <p>
-                                  • Online Fee management system - Which is used by 1000+ students of the college to access their academic standings, apply for shcolarships, pay fees, register for classes and much more.
+                                  • Online Fee management system - Which is used by 1000+ students of the college to access their academic standings, apply for scholarships, pay fees, register for classes and much more.
                                   <br>
                                   <br>• Online Salary management system - Which is used by 200+ faculty/staff of the college to view/update the academic standing of students, approve/disapprove assignment submissions and much more. It also offers an online portal where staff can generate their payslips.
                                   <br>
