--- a/index.html
+++ b/index.html
@@ -78,60 +78,60 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             <h1 class="mb-0"><br>Aditya
               <span class="text-primary">Bhamidipati</span>
             </h1>
-            <div class="subheading mb-5">"Be the change you want to see in the world" 
-                <!-- <a href="#">THEMSBIT</a> -->
-            </div>
+            
             <p class="mb-5" style="max-width: 600px; text-align: justify;" >
               I am an experienced Software Development Engineer with a demonstrated history of working in the computer software industry. Having a sound understanding of Algorithms and Data Structures, Skilled in Python, PHP, Java, Android, Javascript and MySQL. A strong engineering professional with a Graduation focused in Computer Science from Georgia State University December '20. 
-            <ul class="list-inline list-social-icons mb-0">
-                <!-- <li class="list-inline-item">
-                    <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-                </li> -->
-                <!-- <li class="list-inline-item">
-                    <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-                </li> -->
-                <li class="list-inline-item">
-                    <a title="linkedin" href="https://www.linkedin.com/in/aditya-bhamidipati/">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-                </li>
-                <li class="list-inline-item">
-                    <a title="Github" href="https://github.com/ab07max">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-                </li>
-                <li class="list-inline-item">
-                  <script type="text/javascript">
-                    function openTab(th)
-                    {
-                        window.open(th.name,'_blank');
-                    }
-                </script>
-                  <a title="Resume" onClick="openTab(this)" href="#" name="pdf/Aditya_Bhamidipati_s_Resume.pdf">
-                <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="far fa-file fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-              </li>
-            </ul>
+            
           </div>
+
+          <ul class="list-inline list-social-icons mb-0">
+            <!-- <li class="list-inline-item">
+                <a href="#">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+            </li> -->
+            <!-- <li class="list-inline-item">
+                <a href="#">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+            </li> -->
+            <li class="list-inline-item">
+                <a title="linkedin" href="https://www.linkedin.com/in/aditya-bhamidipati/">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+            </li>
+            <li class="list-inline-item">
+                <a title="Github" href="https://github.com/ab07max">
+            <span class="fa-stack fa-lg">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+            </span>
+          </a>
+            </li>
+            <li class="list-inline-item">
+              <script type="text/javascript">
+                function openTab(th)
+                {
+                    window.open(th.name,'_blank');
+                }
+            </script>
+              <a title="Resume" onClick="openTab(this)" href="#" name="pdf/Aditya_Bhamidipati_s_Resume.pdf">
+            <span class="fa-stack fa-lg">
+            <i class="fa fa-circle fa-stack-2x"></i>
+            <i class="far fa-file fa-stack-1x fa-inverse"></i>
+          </span>
+        </a>
+          </li>
+        </ul>
         </div>
         <div class="col-md-4 col-sm-12 mt-5"> 
           <div class="contact-cont2"> 
@@ -459,8 +459,16 @@ License URL: https://creativecommons.org/licenses/by/4.0/
 
     <div class="col-md-3 col-sm-6">
       <div class="competencies-item">
-          <i class="fas fa-chart-line fa-5x"></i>
+          <i class="fas fa-cloud fa-5x"></i>
           <h2><span class="counter"> 55 </span><span>%</span></h2>
+          <p>Cloud Technologies</p>
+      </div>
+  </div>
+
+    <div class="col-md-3 col-sm-6">
+      <div class="competencies-item">
+          <i class="fas fa-chart-line fa-5x"></i>
+          <h2><span class="counter"> 50 </span><span>%</span></h2>
           <p>Big data Analytics</p>
       </div>
   </div>
@@ -526,7 +534,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
              <div class="col-md-3 col-sm-6">
                <div class="skill-item">
                    <i class="fab fa-react fa-5x"></i>
-                   <h2><span class="counter"> 35  </span><span>%</span></h2>
+                   <h2><span class="counter"> 55  </span><span>%</span></h2>
                    <p>React</p>
                </div>
            </div>
@@ -540,6 +548,14 @@ License URL: https://creativecommons.org/licenses/by/4.0/
          </div>
 
          <div class="col-md-3 col-sm-6">
+          <div class="skill-item">
+              <i class="fab fa-gripfire fa-5x"></i>
+              <h2><span class="counter"> 40 </span><span>%</span></h2>
+              <p>Firebase</p>
+          </div>
+      </div>
+
+         <div class="col-md-3 col-sm-6">
            <div class="skill-item">
                <i class="fab fa-aws fa-5x"></i>
                <h2><span class="counter"> 25 </span><span>%</span></h2>
@@ -548,12 +564,12 @@ License URL: https://creativecommons.org/licenses/by/4.0/
        </div>
 
        <div class="col-md-3 col-sm-6">
-         <div class="skill-item">
-             <i class="fab fa-gripfire fa-5x"></i>
-             <h2><span class="counter"> 20 </span><span>%</span></h2>
-             <p>Firebase</p>
-         </div>
-     </div>
+        <div class="skill-item">
+            <i class="fab fa-microsoft fa-5x"></i>
+            <h2><span class="counter"> 20 </span><span>%</span></h2>
+            <p>Azure</p>
+        </div>
+    </div>
 
          </div>
         </div> 
@@ -844,7 +860,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Shopaddicts (ongoing)</h2>
+                                <h2 class="text-center">VTrain - Online Learning (ongoing)</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -853,7 +869,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                                 <img class="img-fluid img-centered" src="img/portfolio/shopping.jpeg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>A Dynamic E-Commerce web application with Integration of 2 payment methods(Stripe and Paypal) and 3+ search filters</p>
+                                <p>An online learning application implementing "Pay as you learn" strategy between users and mentors with payment
+                                  integration stripe (cards, alipay and bitcoin).</p>
                                 <ul class="list-inline item-details">
                                     <li>Organization:
                                         <strong>
@@ -862,17 +879,17 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                                     </li>
                                     <li>Timeline:
                                         <strong>
-                                          February 2020
+                                         December 2019
                                         </strong>
                                     </li>
                                     <li>Github:
                                       <strong>
-                                        <a href="https://github.com/ab07max/react-shopping-cart">Shopaddicts</a>
+                                        <a href="https://github.com/ab07max/react-shopping-cart">VTrain - Online Learning</a>
                                       </strong>
                                     </li>
                                     <li>Technology Stack:
                                         <strong>
-                                          React and Redux, REST Services and Bootstrap
+                                          React and Redux, Express, Firebase and Bootstrap
                                         </strong>
                                     </li>
                                 </ul>
