--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             </span>
           </a>
             </li> -->
+            
             <li class="list-inline-item">
                 <a title="linkedin" href="https://www.linkedin.com/in/aditya-bhamidipati/">
             <span class="fa-stack fa-lg">
@@ -131,7 +132,10 @@ License URL: https://creativecommons.org/licenses/by/4.0/
           </span>
         </a>
           </li>
-        </ul>
+        </ul><br/>
+        <div class="subheading mb-5">"Be the change you want to see in the world" 
+          <!-- <a href="#">THEMSBIT</a> -->
+      </div>
         </div>
         <div class="col-md-4 col-sm-12 mt-5"> 
           <div class="contact-cont2"> 
