Changed project description

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <h3><i class="fas fa-envelope cl-atlantis fa-2x"></i> Email</h3>
             <address class="address-details-f"> 
               <!-- Fax: 800 123 3456 <br> -->
-              <a href="mailto:bhamidipatiaditya23@gmail.com" class="">bhamidipatiaditya23@gmail.com</a>
+              <a href="mailto:vbhamidipati1@student.gsu.edu" class="">vbhamidipati1@student.gsu.edu</a>
             </address>
             <!-- <ul class="list-inline social-icon-f top-data">
               <li><a href="#" target="_empty"><i class="fa top-social fa-facebook" style="color: #4267b2; border-color:#4267b2;"></i></a></li>
@@ -873,8 +873,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                                 <img class="img-fluid img-centered" src="img/portfolio/shopping.jpeg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>An online learning application implementing "Pay as you learn" strategy between users and mentors with payment
-                                  integration stripe (cards, alipay and bitcoin).</p>
+                                <p>In these pandemic times, education has been a major concern. Not every college has the access to online learning. It is very risky to conduct face-to-face sessions between faculty and staff. Also, sometimes student may not be able to dedicate their time towards their academia though they have registered courses. A dynamic E-commerce web application with industry standard search filters, integrations to payment methods (stripe and paypal) implementing the “Pay as you learn” strategy. This will solve the problem of eliminating the need of face-to-face sessions and it will also be favored by the learner, as the strategy suggests, you only pay for what you learn. As soon as the payment is successful, the learner receives an email entailing all the registration details, instructor details and webex/ zoom links.</p>
                                 <ul class="list-inline item-details">
                                     <li>Organization:
                                         <strong>
