--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             </h1>
             
             <p class="mb-5" style="max-width: 600px; text-align: justify;" >
-              I am an experienced Software Development Engineer with a demonstrated history of working in the computer software industry. Having a sound understanding of Algorithms and Data Structures, Skilled in Python, PHP, Java, Android, Javascript and MySQL. A strong engineering professional with a Graduation focused in Computer Science from Georgia State University December '20. 
+              I am an experienced Software Development Engineer with a demonstrated history of working in the computer software industry. Having a sound understanding of Algorithms and Data Structures, Skilled in Python, PHP, Java, Android, React, Javascript, Databases, Web and cloud technologies. A strong engineering professional with a Graduation focused in Computer Science from Georgia State University December '20. 
             
           </div>
 
@@ -153,7 +153,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <h3><i class="fas fa-envelope cl-atlantis fa-2x"></i> Email</h3>
             <address class="address-details-f"> 
               <!-- Fax: 800 123 3456 <br> -->
-              <a href="mailto:vbhamidipati1@student.gsu.edu" class="">vbhamidipati1@student.gsu.edu</a>
+              <a href="mailto:bhamidipatiaditya23@gmail.com" class="">bhamidipatiaditya23@gmail.com</a>
             </address>
             <!-- <ul class="list-inline social-icon-f top-data">
               <li><a href="#" target="_empty"><i class="fa top-social fa-facebook" style="color: #4267b2; border-color:#4267b2;"></i></a></li>
@@ -864,7 +864,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">VTrain - Online Learning (ongoing)</h2>
+                                <h2 class="text-center">Digital Learning Market (ongoing)</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -887,7 +887,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                                     </li>
                                     <li>Github:
                                       <strong>
-                                        <a href="https://github.com/ab07max/react-shopping-cart">VTrain - Online Learning</a>
+                                        <a href="https://github.com/ab07max/react-shopping-cart">Digital Learning Market</a>
                                       </strong>
                                     </li>
                                     <li>Technology Stack:
