removed responsive elements

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             </span>
           </a>
             </li>
-            <li class="list-inline-item">
+            <!-- <li class="list-inline-item">
               <script type="text/javascript">
                 function openTab(th)
                 {
@@ -131,7 +131,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
             <i class="far fa-file fa-stack-1x fa-inverse"></i>
           </span>
         </a>
-          </li>
+          </li> -->
         </ul><br/>
         <div class="subheading mb-5">"Be the change you want to see in the world" 
           <!-- <a href="#">THEMSBIT</a> -->
