--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <h3><i class="fa fa-map-marker cl-atlantis fa-2x"></i> Location</h3>
               <p>Atlanta, Georgia, USA </p>
             </div>
-            <div class="contact-phone contact-side-desc contact-box-desc">
+            <!-- <div class="contact-phone contact-side-desc contact-box-desc">
               <h3><i class="fa fa-phone cl-atlantis fa-2x"></i> Phone</h3>
               <p>+1 404 940 3478</p>
-            </div>
+            </div> -->
             <div class="contact-mail contact-side-desc contact-box-desc">
               <h3><i class="fas fa-envelope cl-atlantis fa-2x"></i> Email</h3>
             <address class="address-details-f"> 
